k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  labels:
    app: devops-app
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  sessionAffinity: None
